FIX: fixed overflowing timeline(2)

--- a/style.css
+++ b/style.css
@@ -763,35 +763,62 @@ ul.home-timeline span:nth-child(1){
     justify-content: center;
     align-items: center;
     border-radius: 2rem;
-    padding: rem;
     height: 28px;
     width: 28px;
-
 }
 
 ul.home-timeline .green-num{
     background-color: var(--green-1);
     color: #fff;
-    position: relative;
-    margin: auto;
-    font-weight: 500; 
 }
 
 ul.home-timeline .grey-num{
     background-color: #F0F4F2;
-    margin: auto;
-    font-weight: 500;
 }
 
+ul.home-timeline .green-num,
+ul.home-timeline .grey-num
 .bold {
     font-weight: 500;
 }
 
-ul.home-timeline span:nth-child(3){
+ul.home-timeline .text{
     font-size: 13px;
     margin-top: -7px;
     display: flex;
-    justify-content: center;
+}
+
+ul.home-timeline .green-text {
+    position: relative;
+    right: 15px;
+}
+
+ul.home-timeline li:not(:last-child) {
+    width: 100%;
+    position: relative;
+}
+
+ul.home-timeline li:nth-child(1)::after,
+ul.home-timeline li:nth-child(2)::after,
+ul.home-timeline li:nth-child(3)::after {
+    content: '';
+    position: absolute;
+    display: block;
+    height: 3px;
+    z-index: -1;
+    left: 0;
+    width: 100%;
+    top: 12px;
+    right: 50%;
+}
+
+ul.home-timeline li:nth-child(1)::after,
+ul.home-timeline li:nth-child(2)::after {
+    background-color: var(--green-1);
+}
+
+ul.home-timeline li:nth-child(3)::after {
+    background-color: var(--grey-3);
 }
 
 @media only screen and (min-width: 600px) {
@@ -857,31 +884,3 @@ ul.home-timeline span:nth-child(3){
         overflow-y: unset;
     }
 }
-
-ul.home-timeline li {
-    width: 100%;
-    position: relative;
-}
-
-ul.home-timeline li:nth-child(1)::after,
-ul.home-timeline li:nth-child(2)::after,
-ul.home-timeline li:nth-child(3)::after {
-    content: '';
-    position: absolute;
-    display: block;
-    height: 3px;
-    z-index: -1;
-    left: 0;
-    width: 100%;
-    top: 12px;
-    left: 50%;
-}
-
-ul.home-timeline li:nth-child(1)::after,
-ul.home-timeline li:nth-child(2)::after {
-    background-color: var(--green-1);
-}
-
-ul.home-timeline li:nth-child(3)::after {
-    background-color: var(--grey-3);
-} 
